<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/orderingCoffee"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2B48C"
    tools:context=".OrderingCoffee">

    <CheckBox
        android:id="@+id/cheese"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="108dp"
        android:onClick="checkBoxListener"
        android:text="@string/sweetCream"
        app:layout_constraintBottom_toTopOf="@+id/breadType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/onion" />

    <CheckBox
        android:id="@+id/onion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:onClick="checkBoxListener"
        android:text="@string/mocha"
        app:layout_constraintBottom_toTopOf="@+id/frenchVanilla"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/frenchVanilla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="42dp"
        android:onClick="checkBoxListener"
        android:text="@string/frenchVanilla"
        app:layout_constraintBottom_toTopOf="@+id/breadType"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/tomato"
        android:layout_width="114dp"
        android:layout_height="49dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="28dp"
        android:onClick="checkBoxListener"
        android:text="@string/irishCream"
        app:layout_constraintBottom_toTopOf="@+id/cheese"
        app:layout_constraintStart_toEndOf="@+id/lettuce" />

    <CheckBox
        android:id="@+id/lettuce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="28dp"
        android:onClick="checkBoxListener"
        android:text="@string/caramel"
        app:layout_constraintBottom_toTopOf="@+id/onion"
        app:layout_constraintEnd_toStartOf="@+id/tomato"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/breadType"
        android:layout_width="224dp"
        android:layout_height="53dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

    <Spinner
        android:id="@+id/protien"
        android:layout_width="223dp"
        android:layout_height="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <Button
        android:id="@+id/addSandwichToOrder"
        android:layout_width="207dp"
        android:layout_height="56dp"
        android:layout_marginBottom="84dp"
        android:text="@string/add_to_order"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sandwich_subTotalEditText"
        android:layout_width="201dp"
        android:layout_height="51dp"
        android:text="@string/subtotal"
        app:layout_constraintBottom_toTopOf="@+id/addSandwichToOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/protien"
        app:layout_constraintVertical_bias="0.292" />

    <TextView
        android:id="@+id/sandwich_subTotalLabel"
        android:layout_width="117dp"
        android:layout_height="50dp"
        android:text="@string/subtotal3"
        app:layout_constraintBottom_toTopOf="@+id/addSandwichToOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/protien"
        app:layout_constraintVertical_bias="0.29" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="210dp"
        android:text="@string/orderCoffee"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/tomato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.215" />

</androidx.constraintlayout.widget.ConstraintLayout>
